Add rel noopener noreferrer

--- a/src/backend/web/templates/about.html
+++ b/src/backend/web/templates/about.html
@@ -21,30 +21,30 @@
       <div class="hidden-xs">
         <div class="btn-group btn-group-block-2">
           <a class="btn btn-default" href="/contact"><span class="glyphicon glyphicon-info-sign"></span> Contact Us!</a>
-          <a class="btn btn-default" href="https://github.com/the-blue-alliance" target="_blank"><span class="glyphicon glyphicon-wrench"></span> Contribute on GitHub!</a>
+          <a class="btn btn-default" href="https://github.com/the-blue-alliance" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-wrench"></span> Contribute on GitHub!</a>
         </div>
       </div>
 
 
 
-      <a href="http://www.firstinspires.org/" target="_blank"><img class="first-logo pull-right" src="/images/first_logo.png" /></a>
+      <a href="http://www.firstinspires.org/" target="_blank" rel="noopener noreferrer"><img class="first-logo pull-right" src="/images/first_logo.png" /></a>
       <h2><em>FIRST</em></h2>
-      <p><a href="http://www.firstinspires.org/" target="_blank"><em>FIRST</em></a> (For Inspiration and Recognition
+      <p><a href="http://www.firstinspires.org/" target="_blank" rel="noopener noreferrer"><em>FIRST</em></a> (For Inspiration and Recognition
       of Science and Technology) is a non-profit organization with the mission of inspiring young people to be
       science and technology leaders. With programs that involve students from kindergarten through high school,
       <em>FIRST</em> has become a world-wide phenomenon with teams from all six inhabited continents.</p>
       <blockquote class="pull-right"><p><em>"To transform our culture by creating a world where science and technology
 	    are celebrated and where young people dream of becoming science and technology leaders."</em></p>
 	    <small>Dean Kamen, <em>FIRST</em> Founder
-	    (<a href="http://www.firstinspires.org/about/vision-and-mission" target="_blank"><em>FIRST</em> Vision</a>)</small>
+	    (<a href="http://www.firstinspires.org/about/vision-and-mission" target="_blank" rel="noopener noreferrer"><em>FIRST</em> Vision</a>)</small>
       </blockquote>
       <div class="clearfix"></div>
 
       <h2>Other Community Sites</h2>
       <p>Here are some other amazing resources that the <em>FIRST</em> community has to offer.</p>
       <ul>
-        <li><a href="https://www.chiefdelphi.com" target="_blank">Chief Delphi</a> &ndash; The go-to forum for <em>FIRST</em> discussion</li>
-        <li><a href="http://frc.link" target="_blank">FRC Links</a> &ndash; Easy access to specific <em>FIRST</em> team and event pages</li>
+        <li><a href="https://www.chiefdelphi.com" target="_blank" rel="noopener noreferrer">Chief Delphi</a> &ndash; The go-to forum for <em>FIRST</em> discussion</li>
+        <li><a href="http://frc.link" target="_blank" rel="noopener noreferrer">FRC Links</a> &ndash; Easy access to specific <em>FIRST</em> team and event pages</li>
       </ul>
 
     </div>
