--- a/src/backend/web/templates/account_login_required.html
+++ b/src/backend/web/templates/account_login_required.html
@@ -55,8 +55,8 @@
       <hr>
 
       <h3>About Google Accounts</h3>
-      <p>The Blue Alliance uses <a href="https://myaccount.google.com" target="_blank">Google Accounts</a> and
-        <a href="https://appleid.apple.com" target="_blank">Apple IDs</a> to handle our login. Only your email address
+      <p>The Blue Alliance uses <a href="https://myaccount.google.com" target="_blank" rel="noopener noreferrer">Google Accounts</a> and
+        <a href="https://appleid.apple.com" target="_blank" rel="noopener noreferrer">Apple IDs</a> to handle our login. Only your email address
         is shared with us and it will always be kept private.</p>
     </div>
   </div>
