--- a/src/backend/web/templates/admin/event_details.html
+++ b/src/backend/web/templates/admin/event_details.html
@@ -287,7 +287,7 @@
 </form>
 
 <h2>Override Event Place ID</h2>
-<p>Link a specific Google Maps Place ID to an event. Use <a href="https://developers.google.com/maps/documentation/javascript/examples/places-placeid-finder" target="_blank">this tool</a> to look up, if needed.</p>
+<p>Link a specific Google Maps Place ID to an event. Use <a href="https://developers.google.com/maps/documentation/javascript/examples/places-placeid-finder" target="_blank" rel="noopener noreferrer">this tool</a> to look up, if needed.</p>
 <form action="/admin/event/update_loaction/{{ event.key_name }}" method="post">
   <input type="text" class="form-control" name="place_id"></input><br>
   <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-map-marker"></span> Set Place ID</button>
