--- a/src/backend/web/templates/brand.html
+++ b/src/backend/web/templates/brand.html
@@ -14,7 +14,7 @@
         Thanks for your interest our branding. We have a few guidelines for using our brand resources. Please take a
         moment to familiarize yourself with them.<br />
         You can find downloadable assets in <a href="https://github.com/the-blue-alliance/the-blue-alliance-logo"
-          target="_blank">our GitHub</a>.
+          target="_blank" rel="noopener noreferrer">our GitHub</a>.
       </p>
 
       <h2>Our Colors</h2>
@@ -47,12 +47,12 @@
             <img width="180" alt="Lamp Logo" src="/images/brand/logo-blue.svg">
           </div>
           <div class="brand-download-btns">
-            <a class="brand-download-btn" target="_blank" href="/images/brand/logo-blue.svg" download
+            <a class="brand-download-btn" target="_blank" rel="noopener noreferrer" href="/images/brand/logo-blue.svg" download
               style="border-bottom-right-radius: 6px">SVG</a>
 
-            <a class="brand-download-btn" target="_blank" href="/images/brand/logo-blue.png" download>PNG</a>
+            <a class="brand-download-btn" target="_blank" rel="noopener noreferrer" href="/images/brand/logo-blue.png" download>PNG</a>
 
-            <a class="brand-download-btn" target="_blank" href="/images/brand/logo-blue.ai" download
+            <a class="brand-download-btn" target="_blank" rel="noopener noreferrer" href="/images/brand/logo-blue.ai" download
               style="border-bottom-left-radius: 6px; border-right-width: 1px">AI</a>
           </div>
         </div>
@@ -61,12 +61,12 @@
             <img width="180" alt="Lamp Logo" src="/images/brand/logo-white.svg">
           </div>
           <div class="brand-download-btns">
-            <a class="brand-download-btn" target="_blank" href="/images/brand/logo-white.svg" download
+            <a class="brand-download-btn" target="_blank" rel="noopener noreferrer" href="/images/brand/logo-white.svg" download
               style="border-bottom-right-radius: 6px">SVG</a>
 
-            <a class="brand-download-btn" target="_blank" href="/images/brand/logo-white.png" download>PNG</a>
+            <a class="brand-download-btn" target="_blank" rel="noopener noreferrer" href="/images/brand/logo-white.png" download>PNG</a>
 
-            <a class="brand-download-btn" target="_blank" href="/images/brand/logo-white.ai" download
+            <a class="brand-download-btn" target="_blank" rel="noopener noreferrer" href="/images/brand/logo-white.ai" download
               style="border-bottom-left-radius: 6px; border-right-width: 1px">AI</a>
           </div>
         </div>
