--- a/src/backend/web/templates/index/index_competitionseason.html
+++ b/src/backend/web/templates/index/index_competitionseason.html
@@ -71,12 +71,12 @@
                         {% if event.webcast %}
                           {% if event.now %}
                             {% if event.webcast_status == 'offline' %}
-                              <a class="btn btn-default btn-small" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
+                              <a class="btn btn-default btn-small" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
                             {% else %}
                               {% if event.webcast_status == 'online' %}
-                                <a class="btn btn-success btn-small" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
+                                <a class="btn btn-success btn-small" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
                               {% else %}
-                                <a class="btn btn-info btn-small" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-question-sign"></span> Watch Now</a>
+                                <a class="btn btn-info btn-small" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-question-sign"></span> Watch Now</a>
                               {% endif %}
                             {% endif %}
                           {% else %}
@@ -84,7 +84,7 @@
                           {% endif %}
                         {% else %}
                           {% if event.future or event.within_a_day %}
-                            <a href="/suggest/event/webcast?event_key={{event.key_name}}" target="_blank">Add webcast</a>
+                            <a href="/suggest/event/webcast?event_key={{event.key_name}}" target="_blank" rel="noopener noreferrer">Add webcast</a>
                           {% endif %}
                         {% endif %}
                       </td>
@@ -99,7 +99,7 @@
       {% else %}
         <h2>Build season has ended. Competitions start soon!</h2>
         <div class="btn-group game-manual">
-          <a class="btn btn-default" href="http://www.firstinspires.org/resource-library/frc/competition-manual-qa-system" target="_blank"><span class="glyphicon glyphicon-file"></span> {{game_name}} Game Manual and Materials</a>
+          <a class="btn btn-default" href="http://www.firstinspires.org/resource-library/frc/competition-manual-qa-system" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-file"></span> {{game_name}} Game Manual and Materials</a>
         </div>
         <br><br>
         <div class="fitvids">
