--- a/src/backend/web/templates/local/bootstrap.html
+++ b/src/backend/web/templates/local/bootstrap.html
@@ -32,7 +32,7 @@
         <h4 class="alert-heading">Getting Started</h4>
         <p>This is a special interface available on a development version of TBA that allows you to import data from the production website.</p>
         <hr>
-        <p>You'll need a production Read APIv3 key to import data - you can get one <a href="https://www.thebluealliance.com/account" target="_blank" class="alert-link">here</a>.</p>
+        <p>You'll need a production Read APIv3 key to import data - you can get one <a href="https://www.thebluealliance.com/account" target="_blank" rel="noopener noreferrer" class="alert-link">here</a>.</p>
         <hr>
         <p>
             There are a few types of data that can be imported:
