--- a/src/backend/web/templates/media_partials/cdphotothread_partial.html
+++ b/src/backend/web/templates/media_partials/cdphotothread_partial.html
@@ -3,6 +3,6 @@
     <span style="background-image:url('{{media.image_direct_url_med}}')"></span>
   </a>
   <div class="caption">
-    <a href="{{media.cdphotothread_thread_url}}" target="_blank">ChiefDelphi Discussion</a>
+    <a href="{{media.cdphotothread_thread_url}}" target="_blank" rel="noopener noreferrer">ChiefDelphi Discussion</a>
   </div>
 </div>
