--- a/src/backend/web/templates/media_partials/imgur_partial.html
+++ b/src/backend/web/templates/media_partials/imgur_partial.html
@@ -3,6 +3,6 @@
     <span style="background-image:url('{{media.image_direct_url_med}}')"></span>
   </a>
   <div class="caption">
-    <a href="{{media.view_image_url}}" target="_blank">Imgur Page</a>
+    <a href="{{media.view_image_url}}" target="_blank" rel="noopener noreferrer">Imgur Page</a>
   </div>
 </div>
