--- a/src/backend/web/templates/predictions.html
+++ b/src/backend/web/templates/predictions.html
@@ -25,7 +25,7 @@
       variance which is used to inform future predictions.</p>
 
       <h2>Event Ranking Predictions</h2>
-      <p>Rankings are predicted using the <a href="https://en.wikipedia.org/wiki/Monte_Carlo_method" target="_blank">Monte Carlo</a>
+      <p>Rankings are predicted using the <a href="https://en.wikipedia.org/wiki/Monte_Carlo_method" target="_blank" rel="noopener noreferrer">Monte Carlo</a>
       method, where matches are simulated many times and the rankings are computed
       for each simulation. Due to the discrete nature of the method, some scenarios
       may never be simulated even though they may be possible.</p>
