--- a/src/backend/web/templates/suggestions/suggest_match_video.html
+++ b/src/backend/web/templates/suggestions/suggest_match_video.html
@@ -72,7 +72,7 @@
             </div>
           </form>
           <br>
-          <p><a class="btn btn-primary" href="https://www.youtube.com/results?search_query={{match.verbose_name|urlencode}}+{{event.year}}+{{event.name|urlencode}}" target="_blank"><span class="glyphicon glyphicon-search"></span> Search YouTube :: {{match.verbose_name}} - {{event.year}} {{event.name}}</a></p>
+          <p><a class="btn btn-primary" href="https://www.youtube.com/results?search_query={{match.verbose_name|urlencode}}+{{event.year}}+{{event.name|urlencode}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-search"></span> Search YouTube :: {{match.verbose_name}} - {{event.year}} {{event.name}}</a></p>
         </div>
       </div>
     </div>
