--- a/src/backend/web/templates/suggestions/suggest_team_social_review.html
+++ b/src/backend/web/templates/suggestions/suggest_team_social_review.html
@@ -38,7 +38,7 @@
                     </label>
                   </div>
                   <div class="col-xs-5 fitvids">
-                      <p><strong><a href="/team/{{reference.team_number}}" target="_blank">Team {{reference.team_number}}{% if reference.nickname %} - {{reference.nickname}}{% endif %}</a></strong></p>
+                      <p><strong><a href="/team/{{reference.team_number}}" target="_blank" rel="noopener noreferrer">Team {{reference.team_number}}{% if reference.nickname %} - {{reference.nickname}}{% endif %}</a></strong></p>
                       {{smm.social_media_card(suggestion)}}
                   </div>
                   <div class="col-xs-2">
