--- a/src/backend/web/templates/team_partials/team_info.html
+++ b/src/backend/web/templates/team_partials/team_info.html
@@ -18,22 +18,22 @@
       {% if team.city_state_country or (team.nl and team.nl.name and team.nl.city_state_country) %}
         <span class="glyphicon glyphicon-map-marker"></span> From
         {% if team.nl and team.nl.name %}
-          <a id="team-location" href="{{team.nl.place_details.url}}" target="_blank">{{team.nl.name}}</a> in {{team.nl.city_state_country}}
+          <a id="team-location" href="{{team.nl.place_details.url}}" target="_blank" rel="noopener noreferrer">{{team.nl.name}}</a> in {{team.nl.city_state_country}}
         {% else %}
-          <a id="team-location" href="{% if team.nl and team.nl.name %}{{team.nl.place_details.url}}{% else %}//maps.google.com/maps?q={{ team.city_state_country|urlencode }}{% endif %}" target="_blank">{{team.city_state_country}}</a>
+          <a id="team-location" href="{% if team.nl and team.nl.name %}{{team.nl.place_details.url}}{% else %}//maps.google.com/maps?q={{ team.city_state_country|urlencode }}{% endif %}" target="_blank" rel="noopener noreferrer">{{team.city_state_country}}</a>
         {% endif %}
         <br>
       {% endif %}
       {% if team.name %}<span class="glyphicon glyphicon-info-sign"></span> aka <em id="team-name">{{ team.name }}</em><br>{% endif %}
       {% if team.rookie_year %}<span class="glyphicon glyphicon-calendar"></span> <span id="team-rookie-year">Rookie Year: {{ team.rookie_year }}</span><br>{% endif %}
       {% if last_competed and last_competed < max_year %}<span class="glyphicon glyphicon-time"></span> <span id="team-last-competed">Last competed in {{ last_competed }}</span><br>{% endif %}
-      {% if team.website %}<span class="glyphicon glyphicon-globe"></span> <a id="team-website" href="{{team.website}}" target="_blank">{{ team.website }}</a><br>{% endif %}
+      {% if team.website %}<span class="glyphicon glyphicon-globe"></span> <a id="team-website" href="{{team.website}}" target="_blank" rel="noopener noreferrer">{{ team.website }}</a><br>{% endif %}
       <span class="glyphicon glyphicon-link"></span> Details on <a href="https://frc-events.firstinspires.org/team/{{team.team_number}}">firstinspires.org</a><br>
       {% if team.championship_location and team.championship_location[year] %}<span class="glyphicon glyphicon-flag"></span> <span id="team-home-cmp">Home Championship: {{team.championship_location[year]}}</span><br>{% endif %}
       {% if hof.is_hof %}<span id="team-hof" class="hall-of-fame"><span class="glyphicon glyphicon-certificate"></span> Hall of Fame ({% for year in hof.years %}{{ year }}{{ ", " if not loop.last }}{% endfor %}){% if hof.media.video or hof.media.presentation or hof.media.essay %}:{% endif %}{% if hof.media.video %} <a href="{{hof.media.video}}">Video</a>{% endif %}{% if hof.media.presentation %}, <a href="{{hof.media.presentation}}">Presentation</a>{% endif %}{% if hof.media.essay %}, <a href="{{hof.media.essay}}">Essay</a>{% endif %}</span><br>{% endif %}
       <hr>
       <span id="team-social-media">
-        <a class="btn btn-xs btn-default{% if social_medias %} pull-right{% endif %}" href="/suggest/team/social_media?team_key={{team.key_name}}" target="_blank"><span class="glyphicon glyphicon-plus"></span> Add Social Media!</a>
+        <a class="btn btn-xs btn-default{% if social_medias %} pull-right{% endif %}" href="/suggest/team/social_media?team_key={{team.key_name}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span> Add Social Media!</a>
         {% for media in social_medias %}
           {{smm.social_media_icon_link(media)}}{% if not loop.last %}&middot;{% endif %}
         {% endfor %}
@@ -47,9 +47,9 @@
         {% if current_event.webcast%}
           <div class="hidden-xs pull-right">
             {% if current_event.webcast_status == 'offline' %}
-              <a class="btn btn-default" id="current-event-webcast" href="{{current_event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
+              <a class="btn btn-default" id="current-event-webcast" href="{{current_event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
             {% else %}
-              <a class="btn btn-success" id="current-event-webcast" href="{{current_event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
+              <a class="btn btn-success" id="current-event-webcast" href="{{current_event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
             {% endif %}
           </div>
         {% endif %}
@@ -75,7 +75,7 @@
       {% include "media_partials/image_carousel_partial.html" %}
     {% else %}
       {% if year %}
-        <a class="btn btn-lg btn-success btn-block" href="/suggest/team/media?team_key={{team.key_name}}&year={{year}}" target="_blank"><span class="glyphicon glyphicon-plus"></span> Add Robot Image!</a>
+        <a class="btn btn-lg btn-success btn-block" href="/suggest/team/media?team_key={{team.key_name}}&year={{year}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span> Add Robot Image!</a>
       {% endif %}
     {% endif %}
     <p class="text-center">
