--- a/src/backend/web/templates/event_details.html
+++ b/src/backend/web/templates/event_details.html
@@ -57,7 +57,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-      <a class="btn btn-success pull-right hidden-xs" href="/suggest/event/video?event_key={{event.key_name}}" target="_blank"><span class="glyphicon glyphicon-plus"></span> Add Match Videos!</a>
+      <a class="btn btn-success pull-right hidden-xs" href="/suggest/event/video?event_key={{event.key_name}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span> Add Match Videos!</a>
       <p>
         {% if district_name %}
           <span class="glyphicon glyphicon-globe"></span> <a href="/events/{{district_abbrev}}/{{event.year}}">{{district_name}} District</a> Event<br />
@@ -70,25 +70,25 @@
           <br><span class="glyphicon glyphicon-map-marker"></span>
           <span itemprop="location">
           {% if event.nl and event.nl.name %}
-            <a href="{{event.nl.place_details.url}}" target="_blank">{{event.nl.name}}</a> in {{event.nl.city_state_country}}
+            <a href="{{event.nl.place_details.url}}" target="_blank" rel="noopener noreferrer">{{event.nl.name}}</a> in {{event.nl.city_state_country}}
           {% else %}
-            <a href="//maps.google.com/maps?q={{ event.city_state_country|urlencode }}" target="_blank">{{event.city_state_country}}</a>
+            <a href="//maps.google.com/maps?q={{ event.city_state_country|urlencode }}" target="_blank" rel="noopener noreferrer">{{event.city_state_country}}</a>
           {% endif %}
           </span>
         {% elif event.location or event.venue_address_safe %}
           <br><span class="glyphicon glyphicon-map-marker"></span>
           <span itemprop="location">
           {% if event.venue_address_safe %}
-            <a href="http://maps.google.com/maps?q={{ event.venue_address_safe|urlencode }}" target="_blank">{{ event.venue_or_venue_from_address }}</a>{% if event.location %} in {{event.location}}{% endif %}
+            <a href="http://maps.google.com/maps?q={{ event.venue_address_safe|urlencode }}" target="_blank" rel="noopener noreferrer">{{ event.venue_or_venue_from_address }}</a>{% if event.location %} in {{event.location}}{% endif %}
           {% else %}
-            <a href="http://maps.google.com/maps?q={{ event.location|urlencode }}" target="_blank">{{event.location}}</a>
+            <a href="http://maps.google.com/maps?q={{ event.location|urlencode }}" target="_blank" rel="noopener noreferrer">{{event.location}}</a>
           {% endif %}
           </span>
         {% endif %}
-        {% if event.website %}<br><span class="glyphicon glyphicon-link"></span> <a href="{{ event.website }}" title="{{ event.name }}" target="_blank">{{ event.website }}</a>{% endif %}
-        {% if event.first_eid or event.official %}{% if not event.website %}<br><span class="glyphicon glyphicon-info-sign"></span>{% else %} - {% endif %} details on <a href="{% if event.first_eid %}https://www.firstinspires.org/team-event-search/event?id={{event.first_eid}}{%elif event.official %}https://frc-events.firstinspires.org/{{event.year}}/{{event.first_api_code}}{%endif%}" target="_blank">firstinspires.org</a>{% endif %}
-        {% if event.year > 2021 %}{% if event.official %}<br><span class="glyphicon glyphicon-plus"></span><a href="https://www.firstinspires.org/sites/default/files/uploads/frc/{{event.year}}-events/{{event.year}}_{{event.first_api_code}}_SiteInfo.pdf" target="_blank">COVID-19 Site Information</a>{% endif %}{% endif %}
-        {% if event.facebook_eid %}<br><span class="glyphicon glyphicon-thumbs-up"></span> <a href="{{ event.facebook_event_url }}" title="Facebook Event" target="_blank">RSVP on Facebook</a><br>{% endif %}
+        {% if event.website %}<br><span class="glyphicon glyphicon-link"></span> <a href="{{ event.website }}" title="{{ event.name }}" target="_blank" rel="noopener noreferrer">{{ event.website }}</a>{% endif %}
+        {% if event.first_eid or event.official %}{% if not event.website %}<br><span class="glyphicon glyphicon-info-sign"></span>{% else %} - {% endif %} details on <a href="{% if event.first_eid %}https://www.firstinspires.org/team-event-search/event?id={{event.first_eid}}{%elif event.official %}https://frc-events.firstinspires.org/{{event.year}}/{{event.first_api_code}}{%endif%}" target="_blank" rel="noopener noreferrer">firstinspires.org</a>{% endif %}
+        {% if event.year > 2021 %}{% if event.official %}<br><span class="glyphicon glyphicon-plus"></span><a href="https://www.firstinspires.org/sites/default/files/uploads/frc/{{event.year}}-events/{{event.year}}_{{event.first_api_code}}_SiteInfo.pdf" target="_blank" rel="noopener noreferrer">COVID-19 Site Information</a>{% endif %}{% endif %}
+        {% if event.facebook_eid %}<br><span class="glyphicon glyphicon-thumbs-up"></span> <a href="{{ event.facebook_event_url }}" title="Facebook Event" target="_blank" rel="noopener noreferrer">RSVP on Facebook</a><br>{% endif %}
       </p>
     </div>
   </div>
@@ -119,12 +119,12 @@
               <div class="pull-right">
                 {% if event.webcast %}
                   {% if event.webcast_status == 'offline' %}
-                    <a class="btn btn-default btn-xs" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
+                    <a class="btn btn-default btn-xs" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
                   {% else %}
-                    <a class="btn btn-success btn-xs" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
+                    <a class="btn btn-success btn-xs" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
                   {% endif %}
                 {% else %}
-                  <a class="btn btn-xs btn-default" href="/suggest/event/webcast?event_key={{event.key_name}}" target="_blank">Add webcast</a>
+                  <a class="btn btn-xs btn-default" href="/suggest/event/webcast?event_key={{event.key_name}}" target="_blank" rel="noopener noreferrer">Add webcast</a>
                 {% endif %}
               </div>
               <h3 class="panel-title">Event in progress</h3>
@@ -275,7 +275,7 @@
                   </div>
                 </td>
                 <td>{% if team.city_state_country %}{{ team.city_state_country }}{% else %}--{% endif %}</td>
-                <td>{% if image_medias %}{% set small_thumbnail = True %}{% include "media_partials/image_carousel_partial.html" %}{% else %}<a class="btn btn-success" href="/suggest/team/media?team_key={{team.key_name}}&year={{event.year}}" target="_blank"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}</td>
+                <td>{% if image_medias %}{% set small_thumbnail = True %}{% include "media_partials/image_carousel_partial.html" %}{% else %}<a class="btn btn-success" href="/suggest/team/media?team_key={{team.key_name}}&year={{event.year}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}</td>
               </tr>
               {% endfor %}
             </tbody>
@@ -307,7 +307,7 @@
                   </div>
                 </td>
                 <td>{% if team.city_state_country %}{{ team.city_state_country }}{% else %}--{% endif %}</td>
-                <td>{% if image_medias %}{% set small_thumbnail = True %}{% include "media_partials/image_carousel_partial.html" %}{% else %}<a class="btn btn-success" href="/suggest/team/media?team_key={{team.key_name}}&year={{event.year}}" target="_blank"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}</td>
+                <td>{% if image_medias %}{% set small_thumbnail = True %}{% include "media_partials/image_carousel_partial.html" %}{% else %}<a class="btn btn-success" href="/suggest/team/media?team_key={{team.key_name}}&year={{event.year}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}</td>
               </tr>
               {% endfor %}
             </tbody>
@@ -425,7 +425,7 @@
 
     <div class="tab-pane" id="media">
         <div class="col-xs-12">
-          <a class="btn btn-success pull-right" href="/suggest/event/media?event_key={{event.key_name}}" target="_blank"><span class="glyphicon glyphicon-plus"></span> Add Other Media!</a>
+          <a class="btn btn-success pull-right" href="/suggest/event/media?event_key={{event.key_name}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span> Add Other Media!</a>
           <h2 id="media">Media</h2>
 
           <div class="row">
@@ -437,7 +437,7 @@
                   </div>
                 {% endfor %}
               {% else %}
-                <p>No videos for this event... <a href="/suggest/event/media?event_key={{event.key_name}}" target="_blank">Why not add one</a>?</p>
+                <p>No videos for this event... <a href="/suggest/event/media?event_key={{event.key_name}}" target="_blank" rel="noopener noreferrer">Why not add one</a>?</p>
               {% endif %}
             </div>
           </div>
@@ -452,7 +452,7 @@
 {% block footer_content %}
 {% if event.official and event.year >= 2006 %}
 <div class="text-left col-xs-12" style="margin-bottom: 2rem;">
-  <span class="glyphicon glyphicon-info-sign"></span> Data provided by the <a href="https://frc-events.firstinspires.org/services/API" target="_blank"><em>FIRST</em><sup>®</sup> Events API</a>
+  <span class="glyphicon glyphicon-info-sign"></span> Data provided by the <a href="https://frc-events.firstinspires.org/services/API" target="_blank" rel="noopener noreferrer"><em>FIRST</em><sup>®</sup> Events API</a>
 </div>
 {% endif %}
 {% endblock %}
