--- a/src/backend/web/templates/index/index_champs.html
+++ b/src/backend/web/templates/index/index_champs.html
@@ -40,12 +40,12 @@
             <div class="pull-right">
             {% if event.now %}
               {% if event.webcast_status == 'offline' %}
-                <a class="btn btn-default btn-small" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
+                <a class="btn btn-default btn-small" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Offline</a>
               {% else %}
                 {% if event.webcast_status == 'online' %}
-                  <a class="btn btn-success btn-small" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
+                  <a class="btn btn-success btn-small" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-facetime-video"></span> Watch Now</a>
                 {% else %}
-                  <a class="btn btn-info btn-small" href="{{event.gameday_url}}" target="_blank"><span class="glyphicon glyphicon-question-sign"></span> Watch Now</a>
+                  <a class="btn btn-info btn-small" href="{{event.gameday_url}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-question-sign"></span> Watch Now</a>
                 {% endif %}
               {% endif %}
             {% else %}
