--- a/src/backend/web/templates/index/index_offseason.html
+++ b/src/backend/web/templates/index/index_offseason.html
@@ -12,12 +12,12 @@
     </div>
     <div class="col-xs-12 col-sm-7 col-lg-8">
       <div class="btn-group game-manual">
-        <a class="btn btn-default" href="http://www.firstinspires.org/resource-library/frc/competition-manual-qa-system" target="_blank"><span class="glyphicon glyphicon-file"></span> {{game_name}} Game Manual and Materials</a>
+        <a class="btn btn-default" href="http://www.firstinspires.org/resource-library/frc/competition-manual-qa-system" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-file"></span> {{game_name}} Game Manual and Materials</a>
       </div>
       <div>
-        <a class="btn btn-default" href="https://www.firstinspires.org/covid-19" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> COVID-19 Resources</a>
-        <a class="btn btn-default" href="https://www.firstinspires.org/robotics/frc/game-and-season" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Game and Season Resources</a>
-        <a class="btn btn-default" href="https://www.firstinspires.org/sites/default/files/uploads/resource_library/frc/game-and-season-info/competition-manual/2021/2021-frc-season-details.pdf" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Season Details</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/covid-19" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> COVID-19 Resources</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/robotics/frc/game-and-season" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Game and Season Resources</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/sites/default/files/uploads/resource_library/frc/game-and-season-info/competition-manual/2021/2021-frc-season-details.pdf" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Season Details</a>
       </div>
 
       {% include "media_partials/live_special_webcast_partial.html" %}
@@ -33,7 +33,7 @@
       <p>Watch the {{kickoff_datetime_utc|strftime("%Y")}} Kickoff LIVE on GameDay on The Blue Alliance on {{kickoff_datetime_utc|strftime("%B %-d%t")}}!</p>
 
       {% if kickoff_facebook_fbid %}
-      <p><a class="btn btn-primary" href="https://www.facebook.com/events/{{kickoff_facebook_fbid}}/" target="_blank"><span class="glyphicon glyphicon-calendar"></span> RSVP on Facebook</a></p>
+      <p><a class="btn btn-primary" href="https://www.facebook.com/events/{{kickoff_facebook_fbid}}/" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-calendar"></span> RSVP on Facebook</a></p>
       {% endif %}
 
       {% if game_teaser_youtube_id %}
