--- a/src/backend/web/templates/index_partials/index_lhc.html
+++ b/src/backend/web/templates/index_partials/index_lhc.html
@@ -1,4 +1,4 @@
-<p class="hidden-xs">The Blue Alliance is the best way to scout, watch, and relive the <a href="http://www.firstinspires.org/" target="_blank" title="FIRST Robotics"><i>FIRST</i> Robotics Competition</a>.</p>
+<p class="hidden-xs">The Blue Alliance is the best way to scout, watch, and relive the <a href="http://www.firstinspires.org/" target="_blank" rel="noopener noreferrer" title="FIRST Robotics"><i>FIRST</i> Robotics Competition</a>.</p>
 <div class="hidden-xs">
 	<div class="btn-group btn-group-block-2">
     <a class="btn btn-default" href="/nearby"><span class="glyphicon glyphicon-search"></span> Search Nearby</a>
@@ -7,13 +7,13 @@
   <br><br>
 </div>
 
-<!-- <a class="btn btn-info btn-block" href="https://sites.google.com/view/firsthelpnow/need-help-now" target="_blank"><span class="glyphicon glyphicon-earphone"></span> Get 24/7 advice from FIRST Help Now</a> -->
+<!-- <a class="btn btn-info btn-block" href="https://sites.google.com/view/firsthelpnow/need-help-now" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-earphone"></span> Get 24/7 advice from FIRST Help Now</a> -->
 
 <div class="hidden-xs">
   <h4 class="text-center">Help other <i>FIRST</i> teams!</h4>
   <div class="btn-group btn-group-block-2">
     <a class="btn btn-default" href="/add-data"><span class="glyphicon glyphicon-info-sign"></span> Help Add Data</a>
-    <a class="btn btn-default" href="https://github.com/the-blue-alliance" target="_blank"><span class="glyphicon glyphicon-wrench"></span> Hack on TBA</a>
+    <a class="btn btn-default" href="https://github.com/the-blue-alliance" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-wrench"></span> Hack on TBA</a>
   </div>
   <br><br>
 </div>
