--- a/src/backend/web/templates/index_partials/index_lhc_offseason.html
+++ b/src/backend/web/templates/index_partials/index_lhc_offseason.html
@@ -1,4 +1,4 @@
-<p>The Blue Alliance is the best way to scout, watch, and relive the <i>FIRST</i> Robotics Competition. Learn more about <i>FIRST</i> at <a href="http://www.firstinspires.org/" target="_blank" title="FIRST Robotics">firstinspires.org</a>.</p>
+<p>The Blue Alliance is the best way to scout, watch, and relive the <i>FIRST</i> Robotics Competition. Learn more about <i>FIRST</i> at <a href="http://www.firstinspires.org/" target="_blank" rel="noopener noreferrer" title="FIRST Robotics">firstinspires.org</a>.</p>
 
 <hr>
 <div>
@@ -6,7 +6,7 @@
   <a class="btn btn-success btn-block" href="/suggest/offseason"><span class="glyphicon glyphicon-plus"></span> Add an Offseason Event</a>
   <a class="btn btn-block btn-primary" href="/eventwizard"><span class="glyphicon glyphicon-pencil"></span> Add Offseason Event Data</a>
   <a class="btn btn-block btn-info" href="/add-data"><span class="glyphicon glyphicon-info-sign"></span> Adding Data Overview</a>
-  <a class="btn btn-block btn-default" href="https://github.com/the-blue-alliance" target="_blank"><span class="glyphicon glyphicon-wrench"></span> Hack on TBA</a>
+  <a class="btn btn-block btn-default" href="https://github.com/the-blue-alliance" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-wrench"></span> Hack on TBA</a>
 </div>
 
 <hr>
