--- a/src/backend/web/templates/nextmatch.html
+++ b/src/backend/web/templates/nextmatch.html
@@ -29,7 +29,7 @@
                   </div>
                 </td>
                 <td>{% if team.city_state_country %}{{ team.city_state_country }}{% else %}--{% endif %}</td>
-                <td>{% if image_medias %}{% set small_thumbnail = True %}{% include "media_partials/image_carousel_partial.html" %}{% else %}<a class="btn btn-success" href="/suggest/team/media?team_key={{team.key_name}}&year={{event.year}}" target="_blank"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}</td>
+                <td>{% if image_medias %}{% set small_thumbnail = True %}{% include "media_partials/image_carousel_partial.html" %}{% else %}<a class="btn btn-success" href="/suggest/team/media?team_key={{team.key_name}}&year={{event.year}}" target="_blank" rel="noopener noreferrer"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}</td>
               </tr>
               {% endfor %}
             </tbody>
