--- a/src/backend/web/templates/suggestions/suggest_match_video_playlist.html
+++ b/src/backend/web/templates/suggestions/suggest_match_video_playlist.html
@@ -29,7 +29,7 @@
                 var li = $("<li>");
                 var group = $('<div>', {class: 'input-group'});
                 li.append(group);
-                group.append($("<a>", {href:"https://youtu.be/"+yt_id, target: "_blank"}).append($("<h4>"+yt_title+"</h4>")));
+                group.append($("<a>", {href:"https://youtu.be/"+yt_id, target: "_blank", rel: "noopener noreferrer"}).append($("<h4>"+yt_title+"</h4>")));
 
                 var match_input = $("<span>");
                 match_input.append("Match ID: ");
