Fix template bugs in event_list enqueue

--- a/src/backend/tasks_io/templates/datafeeds/usfirst_events_details_enqueue.html
+++ b/src/backend/tasks_io/templates/datafeeds/usfirst_events_details_enqueue.html
@@ -1,2 +1,2 @@
-<h2>Enqueued some Events from year {{year}}</h2>
-<p>Event Gets Enqueued: {{event_count}}</p>
+<h2>Enqueued Event fetch for years:</h2>
+<p>{{ years | join(', ') }}</p>
