--- a/src/backend/web/templates/admin/team_details.html
+++ b/src/backend/web/templates/admin/team_details.html
@@ -1,15 +1,15 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
-{% block title %}frc{{team.team_number}} - TBA Admin{% endblock %}
+{% block title %}frc{{ team.team_number }} - TBA Admin{% endblock %}
 
 {% block content %}
 
 <h1>Team {{team.team_number}}</h1>
 
 <div class="btn-group">
-    <a href="/team/{{team.team_number}}" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span> View on TBA</a>
-    <a href="/backend-tasks/get/team_details/{{team.key.id}}" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Refresh from FIRST</a>
-    <a href="/backend-tasks/do/team_blacklist_website/{{team.key.id}}" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Blacklist website</a>
+    <a href="/team/{{ team.team_number }}" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span> View on TBA</a>
+    <a href="/backend-tasks/get/team_details/{{ team.key.string_id() }}" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Refresh from FIRST</a>
+    <a href="/backend-tasks/do/team_blacklist_website/{{ team.key.string_id() }}" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Blacklist website</a>
 </div>
 <hr>
 
@@ -81,14 +81,14 @@
     </tr>
     <tr>
         <td>Events</td>
-        <td>{{event_teams|length}} Events - {% for event_team in event_teams %}<a href="/admin/event/{{event_team.event.id}}">{{event_team.event.id}}</a>, {% endfor %}</td>
+        <td>{{ event_teams|length }} Events - {% for event_team in event_teams %}<a href="/admin/event/{{ event_team.event.string_id() }}">{{ event_team.event.string_id() }}</a>, {% endfor %}</td>
     </tr>
     <tr>
         <td>Robots</td>
         <td>
             {% for robot in robots %}
                 {{ robot.year }}: {{ robot.robot_name }}
-                {% if not forloop.last %}<br>{% endif %}
+                {% if not loop.last %}<br>{% endif %}
             {% endfor %}
         </td>
     </tr>
@@ -96,8 +96,8 @@
         <td>Districts</td>
         <td>
             {% for district_team in district_teams %}
-                {{district_team.key.id}}
-                {% if not forloop.last %}, {% endif %}
+                {{ district_team.key.string_id() }}
+                {% if not loop.last %}, {% endif %}
             {% endfor %}
         </td>
     </tr>
@@ -122,9 +122,10 @@
             <td><input class="form-control" name="year" type="text"></td>
         </tr>
     </table>
-    <input name="reference_key" type="hidden" value="frc{{team.team_number}}" />
+    <input name="reference_key" type="hidden" value="frc{{ team.team_number }}" />
     <input name="reference_type" type="hidden" value="team" />
-    <input name="originating_url" type="hidden" value="/admin/team/{{team.team_number}}" />
+    <input name="originating_url" type="hidden" value="/admin/team/{{ team.team_number }}" />
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-thumbs-up"></span> Add Media</button>
 </form>
 
@@ -134,12 +135,12 @@
   {% if year == None %}
     <h3>No Year:</h3>
   {% else %}
-    <h3>{{year}}:</h3>
+    <h3>{{ year }}:</h3>
   {% endif %}
   <ul>
   <table class="table table-striped table-hover table-condensed">
   <tr><th>Media</th><th>Details</th><th>Tags</th></tr>
-  {% for media in team_medias_by_year|get_item:year %}
+  {% for media in team_medias_by_year|get_item(year) %}
     {% include "partials/admin_media_display.html" %}
   {% endfor %}
   </table>
@@ -178,6 +179,7 @@
     </tr>
   </table>
   <input type="hidden" name="team_key" value="{{ team.key_name }}" />
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
   <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-thumbs-up"></span> Add Robot Name</button>
 </form>
 </div>
@@ -194,8 +196,9 @@
             <div class="modal-footer">
                 <form id="delete_media_form" method="post">
                 <input name="reference_type" type="hidden" value="team" />
-                <input name="reference_key_name" type="hidden" value="{{team.key_name}}" />
-                <input name="originating_url" type="hidden" value="/admin/team/{{team.team_number}}" />
+                <input name="reference_key_name" type="hidden" value="{{ team.key_name }}" />
+                <input name="originating_url" type="hidden" value="/admin/team/{{ team.team_number }}" />
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button class="btn btn-danger" type="submit"><span class="glyphicon glyphicon-delete"></span> Remove reference</button>
@@ -217,8 +220,9 @@
             <div class="modal-footer">
                 <form id="make_preferred_form" method="post">
                 <input name="reference_type" type="hidden" value="team" />
-                <input name="reference_key_name" type="hidden" value="{{team.key_name}}" />
-                <input name="originating_url" type="hidden" value="/admin/team/{{team.team_number}}" />
+                <input name="reference_key_name" type="hidden" value="{{ team.key_name }}" />
+                <input name="originating_url" type="hidden" value="/admin/team/{{ team.team_number }}" />
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button class="btn btn-success" type="submit"><span class="glyphicon glyphicon-star"></span> Make Preferred</button>
@@ -240,8 +244,9 @@
             <div class="modal-footer">
                 <form id="remove_preferred_form" method="post">
                 <input name="reference_type" type="hidden" value="team" />
-                <input name="reference_key_name" type="hidden" value="{{team.key_name}}" />
-                <input name="originating_url" type="hidden" value="/admin/team/{{team.team_number}}" />
+                <input name="reference_key_name" type="hidden" value="{{ team.key_name }}" />
+                <input name="originating_url" type="hidden" value="/admin/team/{{ team.team_number }}" />
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button class="btn btn-success" type="submit"><span class="glyphicon glyphicon-star-empty"></span> Remove Preferred</button>
