--- a/src/backend/web/templates/admin/team_details.html
+++ b/src/backend/web/templates/admin/team_details.html
@@ -110,6 +110,19 @@
 
 <div class="tab-pane" id="media">
 <div class="row">
+<h2>Website</h2>
+<form action="/admin/team/website" method="post">
+    <table class="table table-striped table-hover table-condensed">
+        <tr>
+            <td>URL</td>
+            <td><input class="form-control" name="website" value="{{ team.website if team.website }}" type="text" placeholder="https://thebluealliance.com/"></td>
+        </tr>
+    </table>
+    <input type="hidden" name="team_key" value="{{ team.key_name }}" />
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-thumbs-up"></span> Update Website</button>
+</form>
+
 <h2>Add Media</h2>
 <form action="/admin/media/add_media" method="post">
     <table class="table table-striped table-hover table-condensed">
